kinda done with the price section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <ul class="navbar-ul ">
                         <li><a class="navbar-link" onclick="myFunction()" rel="noopener" href="#about-us">Tour</a></li>
                         <li><a class="navbar-link" onclick="myFunction()" rel="noopener" href="#destination">destination</a></li>
-                        <li><a class="navbar-link" onclick="myFunction()" rel="noopener" href="#">Pricing</a></li>
+                        <li><a class="navbar-link" onclick="myFunction()" rel="noopener" href="#pricing">Pricing</a></li>
                         <li><a class="navbar-link" onclick="myFunction()" rel="noopener" href="#">Contact</a></li>
                     </ul>
                 </div>
@@ -352,11 +352,97 @@
     </section>
     <!--end  destination -->
     <!--Start  price -->
-    <section class="padding-top-bottom">
+    <section class="padding-top-bottom" id="pricing">
         <div class="container">
-            <div class="price-card-container">
-                <div class="price-card"></div>
+            <div style="text-align: center;" class="price-text-holder">
+                <h2 class="about-h2">Pricing</h2>
             </div>
+            <div class="outer-container-card">
+                <div class="price-card-container">
+                    <div class="price-card">
+                        <div class="price-head-title">
+                            <h2 class="card-white-color about-h2">Economy</h2>
+                        </div>
+                        <div class="curved price-head-price">
+                            <span class="card-white-color about-h2">$</span>
+                            <h1 style="padding-bottom: 30px;" class="card-white-color price about-h2">249</h1>
+                        </div>
+                        <div class="price-detail">
+                            <div>
+                                <i style=" font-weight: bold; color: rgb(175, 233, 88);" class="far fa-check-circle"></i>
+                                <p style="font-weight: bold;" class="about-h2">Food and Beverages </p>
+                            </div>
+                            <div>
+                                <i style=" font-weight: bold; color: rgb(175, 233, 88);" class="far fa-check-circle"></i>
+                                <p style="font-weight: bold;" class="about-h2">Miles Earned </p>
+                            </div>
+                            <div>
+                                <i style=" font-weight: bold; color: rgb(175, 233, 88);" class="far fa-check-circle"></i>
+                                <p style="font-weight: bold;" class="about-h2">Seat Selection </p>
+                            </div>
+
+                        </div>
+                        <div class="sign-up">
+                            <a class="card-white-color" href="#">Sign up</a>
+                        </div>
+                    </div>
+                    <div class="price-card">
+                        <div class="price-head-title">
+                            <h2 class="card-white-color about-h2">Business</h2>
+                        </div>
+                        <div class="curved price-head-price">
+                            <span class="card-white-color about-h2">$</span>
+                            <h1 style="padding-bottom: 30px;" class="card-white-color price about-h2">449</h1>
+                        </div>
+                        <div class="price-detail">
+                            <div>
+                                <i style=" font-weight: bold; color: rgb(175, 233, 88);" class="far fa-check-circle"></i>
+                                <p style="font-weight: bold;" class="about-h2">Food and Beverages </p>
+                            </div>
+                            <div>
+                                <i style=" font-weight: bold; color: rgb(175, 233, 88);" class="far fa-check-circle"></i>
+                                <p style="font-weight: bold;" class="about-h2">Miles Earned </p>
+                            </div>
+                            <div>
+                                <i style=" font-weight: bold; color: rgb(175, 233, 88);" class="far fa-check-circle"></i>
+                                <p style="font-weight: bold;" class="about-h2">Seat Selection </p>
+                            </div>
+
+                        </div>
+                        <div class="sign-up">
+                            <a class="card-white-color" href="#">Sign up</a>
+                        </div>
+                    </div>
+                    <div class="price-card">
+                        <div class="price-head-title">
+                            <h2 class="card-white-color about-h2">First class</h2>
+                        </div>
+                        <div class="curved price-head-price">
+                            <span class="card-white-color about-h2">$</span>
+                            <h1 style="padding-bottom: 30px;" class="card-white-color price about-h2">799</h1>
+                        </div>
+                        <div class="price-detail">
+                            <div>
+                                <i style=" font-weight: bold; color: rgb(175, 233, 88);" class="far fa-check-circle"></i>
+                                <p style="font-weight: bold;" class="about-h2">Food and Beverages </p>
+                            </div>
+                            <div>
+                                <i style=" font-weight: bold; color: rgb(175, 233, 88);" class="far fa-check-circle"></i>
+                                <p style="font-weight: bold;" class="about-h2">Miles Earned </p>
+                            </div>
+                            <div>
+                                <i style=" font-weight: bold; color: rgb(175, 233, 88);" class="far fa-check-circle"></i>
+                                <p style="font-weight: bold;" class="about-h2">Seat Selection </p>
+                            </div>
+
+                        </div>
+                        <div class="sign-up">
+                            <a class="card-white-color" href="#">Sign up</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
     </section>
     <!--end  price -->
