--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 </article>
             </section>
             <div class="destination-text">
-                <h2 style="width: 100%; display: block;" class="about-h2">Recent Trips</h2>
+                <h2 style="width: 100%; display: block; padding: 40px 0;" class="about-h2">Recent Trips</h2>
             </div>
             <section class="destination-images-container">
                 <article class="destination-image-holder seventeen-percent">
@@ -357,88 +357,86 @@
             <div style="text-align: center;" class="price-text-holder">
                 <h2 class="about-h2">Pricing</h2>
             </div>
-            <div class="outer-container-card">
-                <div class="price-card-container">
-                    <div class="price-card">
-                        <div class="price-head-title">
-                            <h2 class="card-white-color about-h2">Economy</h2>
-                        </div>
-                        <div class="curved price-head-price">
-                            <span class="card-white-color about-h2">$</span>
-                            <h1 style="padding-bottom: 30px;" class="card-white-color price about-h2">249</h1>
-                        </div>
-                        <div class="price-detail">
-                            <div>
-                                <i style=" font-weight: bold; color: rgb(175, 233, 88);" class="far fa-check-circle"></i>
-                                <p style="font-weight: bold;" class="about-h2">Food and Beverages </p>
-                            </div>
-                            <div>
-                                <i style=" font-weight: bold; color: rgb(175, 233, 88);" class="far fa-check-circle"></i>
-                                <p style="font-weight: bold;" class="about-h2">Miles Earned </p>
-                            </div>
-                            <div>
-                                <i style=" font-weight: bold; color: rgb(175, 233, 88);" class="far fa-check-circle"></i>
-                                <p style="font-weight: bold;" class="about-h2">Seat Selection </p>
-                            </div>
-
-                        </div>
-                        <div class="sign-up">
-                            <a class="card-white-color" href="#">Sign up</a>
-                        </div>
+            <div class="price-card-container">
+                <div class="price-card">
+                    <div class="price-head-title">
+                        <h2 class="card-white-color about-h2">Economy</h2>
                     </div>
-                    <div class="price-card">
-                        <div class="price-head-title">
-                            <h2 class="card-white-color about-h2">Business</h2>
-                        </div>
-                        <div class="curved price-head-price">
-                            <span class="card-white-color about-h2">$</span>
-                            <h1 style="padding-bottom: 30px;" class="card-white-color price about-h2">449</h1>
-                        </div>
-                        <div class="price-detail">
-                            <div>
-                                <i style=" font-weight: bold; color: rgb(175, 233, 88);" class="far fa-check-circle"></i>
-                                <p style="font-weight: bold;" class="about-h2">Food and Beverages </p>
-                            </div>
-                            <div>
-                                <i style=" font-weight: bold; color: rgb(175, 233, 88);" class="far fa-check-circle"></i>
-                                <p style="font-weight: bold;" class="about-h2">Miles Earned </p>
-                            </div>
-                            <div>
-                                <i style=" font-weight: bold; color: rgb(175, 233, 88);" class="far fa-check-circle"></i>
-                                <p style="font-weight: bold;" class="about-h2">Seat Selection </p>
-                            </div>
-
-                        </div>
-                        <div class="sign-up">
-                            <a class="card-white-color" href="#">Sign up</a>
-                        </div>
+                    <div class="curved price-head-price">
+                        <span class="card-white-color about-h2">$</span>
+                        <h1 style="padding-bottom: 30px;" class="card-white-color price about-h2">249</h1>
                     </div>
-                    <div class="price-card">
-                        <div class="price-head-title">
-                            <h2 class="card-white-color about-h2">First class</h2>
+                    <div class="price-detail">
+                        <div>
+                            <i style=" font-weight: bold; font-size: 18px; color: rgb(175, 233, 88);" class="far fa-check-circle"></i>
+                            <p style="font-weight: bold;" class="about-h2">Food and Beverages </p>
                         </div>
-                        <div class="curved price-head-price">
-                            <span class="card-white-color about-h2">$</span>
-                            <h1 style="padding-bottom: 30px;" class="card-white-color price about-h2">799</h1>
+                        <div>
+                            <i style=" font-weight: bold; font-size: 18px;  color: rgb(175, 233, 88);" class="far fa-check-circle"></i>
+                            <p style="font-weight: bold;" class="about-h2">Miles Earned </p>
                         </div>
-                        <div class="price-detail">
-                            <div>
-                                <i style=" font-weight: bold; color: rgb(175, 233, 88);" class="far fa-check-circle"></i>
-                                <p style="font-weight: bold;" class="about-h2">Food and Beverages </p>
-                            </div>
-                            <div>
-                                <i style=" font-weight: bold; color: rgb(175, 233, 88);" class="far fa-check-circle"></i>
-                                <p style="font-weight: bold;" class="about-h2">Miles Earned </p>
-                            </div>
-                            <div>
-                                <i style=" font-weight: bold; color: rgb(175, 233, 88);" class="far fa-check-circle"></i>
-                                <p style="font-weight: bold;" class="about-h2">Seat Selection </p>
-                            </div>
+                        <div>
+                            <i style=" font-weight: bold; font-size: 18px; color: rgb(175, 233, 88);" class="far fa-check-circle"></i>
+                            <p style="font-weight: bold;" class="about-h2">Seat Selection </p>
+                        </div>
 
+                    </div>
+                    <div class="sign-up">
+                        <a class="card-white-color" href="#">Sign up</a>
+                    </div>
+                </div>
+                <div class="price-card">
+                    <div class="price-head-title">
+                        <h2 class="card-white-color about-h2">Business</h2>
+                    </div>
+                    <div class="curved price-head-price">
+                        <span class="card-white-color about-h2">$</span>
+                        <h1 style="padding-bottom: 30px;" class="card-white-color price about-h2">449</h1>
+                    </div>
+                    <div class="price-detail">
+                        <div>
+                            <i style=" font-weight: bold; font-size: 18px; color: rgb(175, 233, 88);" class="far fa-check-circle"></i>
+                            <p style="font-weight: bold;" class="about-h2">Food and Beverages </p>
                         </div>
-                        <div class="sign-up">
-                            <a class="card-white-color" href="#">Sign up</a>
+                        <div>
+                            <i style=" font-weight: bold; font-size: 18px; color: rgb(175, 233, 88);" class="far fa-check-circle"></i>
+                            <p style="font-weight: bold;" class="about-h2">Miles Earned </p>
                         </div>
+                        <div>
+                            <i style=" font-weight: bold; font-size: 18px; color: rgb(175, 233, 88);" class="far fa-check-circle"></i>
+                            <p style="font-weight: bold;" class="about-h2">Seat Selection </p>
+                        </div>
+
+                    </div>
+                    <div class="sign-up">
+                        <a class="card-white-color" href="#">Sign up</a>
+                    </div>
+                </div>
+                <div class="price-card">
+                    <div class="price-head-title">
+                        <h2 class="card-white-color about-h2">First class</h2>
+                    </div>
+                    <div class="curved price-head-price">
+                        <span class="card-white-color about-h2">$</span>
+                        <h1 style="padding-bottom: 30px;" class="card-white-color price about-h2">799</h1>
+                    </div>
+                    <div class="price-detail">
+                        <div>
+                            <i style=" font-weight: bold; font-size: 18px; color: rgb(175, 233, 88);" class="far fa-check-circle"></i>
+                            <p style="font-weight: bold;" class="about-h2">Food and Beverages </p>
+                        </div>
+                        <div>
+                            <i style=" font-weight: bold; font-size: 18px; color: rgb(175, 233, 88);" class="far fa-check-circle"></i>
+                            <p style="font-weight: bold;" class="about-h2">Miles Earned </p>
+                        </div>
+                        <div>
+                            <i style=" font-weight: bold; font-size: 18px; color: rgb(175, 233, 88);" class="far fa-check-circle"></i>
+                            <p style="font-weight: bold;" class="about-h2">Seat Selection </p>
+                        </div>
+
+                    </div>
+                    <div class="sign-up">
+                        <a class="card-white-color" href="#">Sign up</a>
                     </div>
                 </div>
             </div>
@@ -447,7 +445,7 @@
     </section>
     <!--end  price -->
     <!--Start  footer -->
-    <footer>
+    <footer class="padding-top-bottom">
         <div class="container">
 
         </div>
