fixed the scroll issue

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <h2 class="about-h2">Popular Destination</h2>
             </div>
             <section class="destination-cards-container ">
-                <article class="destination-card-holder">
+                <div class="destination-card-holder">
                     <div class="card-image-holder">
                         <img class="hero-image" src="https://images.unsplash.com/photo-1501594907352-04cda38ebc29?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80" alt="Golden Gate Bridge, San Francisco, United States">
                     </div>
@@ -136,8 +136,8 @@
                             <p class="duration-time">5 Days</p>
                         </div>
                     </div>
-                </article>
-                <article class="destination-card-holder">
+                </div>
+                <div class="destination-card-holder">
                     <div class="card-image-holder">
                         <img class="hero-image" src="https://images.unsplash.com/photo-1456693906521-44e96e49e85f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Beverly Hills, United States">
                     </div>
@@ -163,8 +163,8 @@
                             <p class="duration-time">7 Days</p>
                         </div>
                     </div>
-                </article>
-                <article class="destination-card-holder">
+                </div>
+                <div class="destination-card-holder">
                     <div class="card-image-holder">
                         <img class="hero-image" src="https://images.unsplash.com/photo-1534430480872-3498386e7856?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Manhattan, New York, United States">
                     </div>
@@ -190,8 +190,8 @@
                             <p class="duration-time">5 Days</p>
                         </div>
                     </div>
-                </article>
-                <article class="destination-card-holder">
+                </div>
+                <div class="destination-card-holder">
                     <div class="card-image-holder">
                         <img class="hero-image" src="https://images.unsplash.com/photo-1580628646333-99de91e7e8ce?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Banyan Tree Bintan, Sebong Lagoi, Bintan Regency, Riau Islands, Indonesia">
                     </div>
@@ -217,8 +217,8 @@
                             <p class="duration-time">8 Days</p>
                         </div>
                     </div>
-                </article>
-                <article class="destination-card-holder">
+                </div>
+                <div class="destination-card-holder">
                     <div class="card-image-holder">
                         <img class="hero-image" src="https://images.unsplash.com/photo-1519046904884-53103b34b206?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Rio de Janeiro, Brazil">
                     </div>
@@ -244,8 +244,8 @@
                             <p class="duration-time">14 Days</p>
                         </div>
                     </div>
-                </article>
-                <article class="destination-card-holder">
+                </div>
+                <div class="destination-card-holder">
                     <div class="card-image-holder">
                         <img class="hero-image" src="https://images.unsplash.com/photo-1501594907352-04cda38ebc29?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80" alt="Golden Gate Bridge, San Francisco, United States">
                     </div>
@@ -271,13 +271,13 @@
                             <p class="duration-time">3 Days</p>
                         </div>
                     </div>
-                </article>
+                </div>
             </section>
             <div class="destination-text">
                 <h2 style="width: 100%; display: block; padding: 40px 0;" class="about-h2">Recent Trips</h2>
             </div>
             <section class="destination-images-container">
-                <article class="destination-image-holder seventeen-percent">
+                <div class="destination-image-holder seventeen-percent">
                     <div class="background-holder">
                         <img class="hero-image" src="images/place5.jpg" alt="place-1">
                     </div>
@@ -286,8 +286,8 @@
                             <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
-                </article>
-                <article class="destination-image-holder">
+                </div>
+                <div class="destination-image-holder">
                     <div class="background-holder">
                         <img class="hero-image" src="images/place2.jpg" alt="place-2">
                     </div>
@@ -296,8 +296,8 @@
                             <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
-                </article>
-                <article class="destination-image-holder ">
+                </div>
+                <div class="destination-image-holder ">
                     <div class="background-holder">
                         <img class="hero-image" src="images/place3.jpg" alt="place-3">
                     </div>
@@ -306,8 +306,8 @@
                             <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
-                </article>
-                <article class="destination-image-holder seventeen-percent">
+                </div>
+                <div class="destination-image-holder seventeen-percent">
                     <div class="background-holder">
                         <img class="hero-image" src="images/place1.jpg" alt="place-4">
                     </div>
@@ -316,8 +316,8 @@
                             <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
-                </article>
-                <article class="destination-image-holder ">
+                </div>
+                <div class="destination-image-holder ">
                     <div class="background-holder">
                         <img class="hero-image" src="images/place5.jpg" alt="place-3">
                     </div>
@@ -326,8 +326,8 @@
                             <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
-                </article>
-                <article class="destination-image-holder ">
+                </div>
+                <div class="destination-image-holder ">
                     <div class="background-holder">
                         <img class="hero-image" src="images/place2.jpg" alt="place-3">
                     </div>
@@ -336,8 +336,8 @@
                             <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
-                </article>
-                <article class="destination-image-holder ">
+                </div>
+                <div class="destination-image-holder ">
                     <div class="background-holder">
                         <img class="hero-image" src="images/place1.jpg" alt="place-3">
                     </div>
@@ -346,7 +346,7 @@
                             <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
-                </article>
+                </div>
             </section>
         </div>
     </section>
@@ -477,8 +477,9 @@
                     <div class="information-holder">
                         <div class="information-list">
                             <ul>
-                                <li><i class="fas fa-map-marker-alt"></i><span>Hi</span></li>
-                                <li><i class="fas fa-phone"></i><span>+ 123 4578 543</span></li>
+                                <li><i class="fas fa-map-marker-alt"></i><span>58 Valley View Street
+                                    Clayton, NC 27520</span></li>
+                                <li><i class="fas fa-phone"></i><span>+123 4578 543</span></li>
                                 <li><i class="fas fa-envelope"></i><span>info@youremail.com</span></li>
                                 <li><i class="fas fa-globe-americas"></i><span>yourwebsite.com</span></li>
                             </ul>
