contact is done

--- a/index.html
+++ b/index.html
@@ -474,11 +474,10 @@
                     <div class="information-holder">
                         <div class="information-list">
                             <ul>
-                                <li><i class="fas fa-map-marker-alt"></i><span>58 Valley View Street
-                                    Clayton, NC 27520</span></li>
-                                <li><i class="fas fa-phone"></i><span>+123 4578 543</span></li>
-                                <li><i class="fas fa-envelope"></i><span>info@youremail.com</span></li>
-                                <li><i class="fas fa-globe-americas"></i><span>yourwebsite.com</span></li>
+                                <li><i style="color: #035aa6;" class="fas fa-map-marker-alt"></i> <span>58 Valley View StreetClayton, NC 27520</span> </li>
+                                <li><i style="color: #035aa6;" class="fas fa-phone"></i><span>+123 4578 543</span></li>
+                                <li><i style="color: #035aa6;" class="fas fa-envelope"></i><span>info@youremail.com</span></li>
+                                <li><i style="color: #035aa6;" class="fas fa-globe-americas"></i><span>yourwebsite.com</span></li>
                             </ul>
                         </div>
                     </div>
