--- a/index.html
+++ b/index.html
@@ -486,6 +486,33 @@
         </div>
     </section>
     <!--end  contact -->
+    <!-- start footer  -->
+    <footer class="footer padding-top-bottom" id="footer">
+        <div class="container">
+            <div class="footer-about-us">
+                <div class="footer-about-us-holder">
+                    <h2 class="about-h2">About us</h2>
+                    <p>Meant balls it if up doubt small purse. Required his you put the outlived answered position. An pleasure exertion if believed provided to. All led out world these music while asked. Paid mind even sons does he door no. Attended overcame
+                        repeated it is perceive marianne in. In am think on style child of. Servants moreover in sensible he it ye possible. </p>
+                </div>
+            </div>
+            <div class="footer-icons">
+                <div class="follow-us about-h2">
+                    <h2 class="about-2">Follow us</h2>
+                    <div class="icon-container">
+                        <div class="icon-holder"> <a class="footer-icons-link" target="_blank" rel="noopener" href="https://www.facebook.com/group.Iqraa/"><i style="width: 28px; height: 28px;" class="fa fa-facebook" aria-hidden="true"></i></a></div>
+                        <div class="icon-holder"> <a class="footer-icons-link" target="_blank" rel="noopener" href="https://twitter.com/eqrateam"><i style="width: 28px; height: 28px;" class="fab fa-twitter" aria-hidden="true"></i></a></div>
+                        <div class="icon-holder"> <a class="footer-icons-link" target="_blank" rel="noopener" href="https://www.instagram.com/eqrateam/"><i style="width: 28px; height: 28px;" class="fa fa-instagram" aria-hidden="true"></i></a></div>
+                        <div class="icon-holder"> <a class="footer-icons-link" target="_blank" rel="noopener" href="https://www.Snapchat.com/add/group.iqra"><i style="width: 28px; height: 28px;" class="fa fa-snapchat" aria-hidden="true"></i></a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="copy">
+                <h3 class="copyright about-h2">Copyright &copy; 2020 Ahmad Dalao</h3>
+            </div>
+        </div>
+    </footer>
+    <!-- end footer  -->
 
 
 
