--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 
                     </div>
                     <div class="sign-up">
-                        <a class="card-white-color" href="#">Sign up</a>
+                        <a href="#" aria-label="Sign up" class="card-white-color">Sign up</a>
                     </div>
                 </article>
                 <article class="price-card">
@@ -420,7 +420,7 @@
 
                     </div>
                     <div class="sign-up">
-                        <a class="card-white-color" href="#">Sign up</a>
+                        <a href="#" aria-label="Sign up" class="card-white-color">Sign up</a>
                     </div>
                 </article>
                 <article class="price-card">
@@ -447,7 +447,7 @@
 
                     </div>
                     <div class="sign-up">
-                        <a class="card-white-color" href="#">Sign up</a>
+                        <a href="#" aria-label="Sign up" class="card-white-color">Sign up</a>
                     </div>
                 </article>
             </section>
@@ -521,10 +521,10 @@
                 <div class="follow-us about-h2">
                     <h2 class="about-2">Follow us</h2>
                     <div class="icon-container">
-                        <div class="icon-holder"> <a class="footer-icons-link" target="_blank" rel="noopener" href="https://www.facebook.com/group.Iqraa/"><i style="width: 28px; height: 28px;" class="fa fa-facebook" aria-hidden="true"></i></a></div>
-                        <div class="icon-holder"> <a class="footer-icons-link" target="_blank" rel="noopener" href="https://twitter.com/eqrateam"><i style="width: 28px; height: 28px;" class="fab fa-twitter" aria-hidden="true"></i></a></div>
-                        <div class="icon-holder"> <a class="footer-icons-link" target="_blank" rel="noopener" href="https://www.instagram.com/eqrateam/"><i style="width: 28px; height: 28px;" class="fa fa-instagram" aria-hidden="true"></i></a></div>
-                        <div class="icon-holder"> <a class="footer-icons-link" target="_blank" rel="noopener" href="https://www.Snapchat.com/add/group.iqra"><i style="width: 28px; height: 28px;" class="fa fa-snapchat" aria-hidden="true"></i></a></div>
+                        <div class="icon-holder"> <a href="https://www.facebook.com/group.Iqraa/" aria-label="Facebook" class="footer-icons-link" target="_blank" rel="noopener"><i style="width: 28px; height: 28px;" class="fa fa-facebook" aria-hidden="true"></i></a></div>
+                        <div class="icon-holder"> <a href="https://twitter.com/eqrateam" aria-label="Twitter" class="footer-icons-link" target="_blank" rel="noopener"><i style="width: 28px; height: 28px;" class="fab fa-twitter" aria-hidden="true"></i></a></div>
+                        <div class="icon-holder"> <a href="https://www.instagram.com/eqrateam/" aria-label="Instagram" class="footer-icons-link" target="_blank" rel="noopener"><i style="width: 28px; height: 28px;" class="fa fa-instagram" aria-hidden="true"></i></a></div>
+                        <div class="icon-holder"> <a href="https://www.Snapchat.com/add/group.iqra" aria-label="Snapchat" class="footer-icons-link" target="_blank" rel="noopener"><i style="width: 28px; height: 28px;" class="fa fa-snapchat" aria-hidden="true"></i></a></div>
                     </div>
                 </div>
             </section>
