adding more aria-label element

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Mountain Travel a travel agency">
+
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/5a0dddbca3.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display|Sacramento&display=swap" rel="stylesheet" />
@@ -23,10 +25,10 @@
                 <div class="navbar-list" id="navbar-not-responsive">
                     <!-- removing the custom transition will remove the lag-->
                     <ul class="navbar-ul ">
-                        <li><a class="navbar-link" onclick="myFunction()" rel="noopener" href="#about-us">Tour</a></li>
-                        <li><a class="navbar-link" onclick="myFunction()" rel="noopener" href="#destination">destination</a></li>
-                        <li><a class="navbar-link" onclick="myFunction()" rel="noopener" href="#pricing">Pricing</a></li>
-                        <li><a class="navbar-link" onclick="myFunction()" rel="noopener" href="#contact">Contact</a></li>
+                        <li><a aria-label="Tour" class="navbar-link" onclick="myFunction()" rel="noopener" href="#about-us">Tour</a></li>
+                        <li><a aria-label="Destination" class="navbar-link" onclick="myFunction()" rel="noopener" href="#destination">destination</a></li>
+                        <li><a aria-label="Pricing" class="navbar-link" onclick="myFunction()" rel="noopener" href="#pricing">Pricing</a></li>
+                        <li><a aria-label="Contact" class="navbar-link" onclick="myFunction()" rel="noopener" href="#contact">Contact</a></li>
                     </ul>
                 </div>
             </section>
@@ -48,7 +50,7 @@
                     <div class="text-holder">
                         <h1>Travel The World</h1>
                         <p>He my polite be object oh change. Consider no mr am overcame </p>
-                        <a href="#">Learn more</a>
+                        <a aria-label="Learn more" href="#">Learn more</a>
                     </div>
                 </div>
             </div>
