adding subscribe section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Mountain Travel a travel agency">
-
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/5a0dddbca3.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display|Sacramento&display=swap" rel="stylesheet" />
@@ -395,7 +394,7 @@
 
                     </div>
                     <div class="sign-up">
-                        <a href="#" aria-label="Sign up" class="card-white-color">Sign up</a>
+                        <a href="#" aria-label="Sign up" class="card-white-color custom-button">Sign up</a>
                     </div>
                 </article>
                 <article class="price-card">
@@ -422,7 +421,7 @@
 
                     </div>
                     <div class="sign-up">
-                        <a href="#" aria-label="Sign up" class="card-white-color">Sign up</a>
+                        <a href="#" aria-label="Sign up" class="card-white-color custom-button">Sign up</a>
                     </div>
                 </article>
                 <article class="price-card">
@@ -449,7 +448,7 @@
 
                     </div>
                     <div class="sign-up">
-                        <a href="#" aria-label="Sign up" class="card-white-color">Sign up</a>
+                        <a href="#" aria-label="Sign up" class="card-white-color custom-button">Sign up</a>
                     </div>
                 </article>
             </section>
@@ -458,6 +457,22 @@
     </section>
     <!--end  price -->
 
+    <!-- start subscribe section-->
+    <section class="subscribe padding-top-bottom">
+        <div class="hero-image-subscribe">
+            <div class="container">
+                <div class="subscribe-data-container">
+                    <h2 style=" padding-top:20px; opacity: .8; text-transform: initial; color: whitesmoke; text-align: center; padding-bottom: 0;" class="about-h2">Subscribe to the news list</h2>
+                    <p style="opacity: .8; padding-bottom: 15px; padding-top: 0; color: whitesmoke; text-align: center;" class="about-p">Get the latest and greatest deals from our agency delivered straight to your inbox. </p>
+                    <div class="subscribe-data">
+                        <input autocomplete="on" required style="width: 30%;" type="text" placeholder="subscribe , enter your email">
+                        <a aria-label="Subscribe" href="#" class="card-white-color custom-button" style="background-color: #035aa6; color: white; opacity: 1; font-size: unset; padding: 11px; ">Subscribe</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end subscribe section-->
 
     <!--Start  contact -->
     <section id="contact" class="padding-top-bottom">
@@ -501,13 +516,6 @@
         </div>
     </section>
     <!--end  contact -->
-
-    <!-- start subscribe section-->
-    <section class="subscribe">
-        <div class="container">
-        </div>
-    </section>
-    <!-- end subscribe section-->
 
     <!-- start footer  -->
     <footer class="footer padding-top-bottom" id="footer">
