--- a/index.html
+++ b/index.html
@@ -461,12 +461,14 @@
     <section class="subscribe padding-top-bottom">
         <div class="hero-image-subscribe">
             <div class="container">
-                <div class="subscribe-data-container">
-                    <h2 style=" padding-top:20px; opacity: .8; text-transform: initial; color: whitesmoke; text-align: center; padding-bottom: 0;" class="about-h2">Subscribe to the news list</h2>
-                    <p style="opacity: .8; padding-bottom: 15px; padding-top: 0; color: whitesmoke; text-align: center;" class="about-p">Get the latest and greatest deals from our agency delivered straight to your inbox. </p>
-                    <div class="subscribe-data">
-                        <input autocomplete="on" required style="width: 30%;" type="text" placeholder="subscribe , enter your email">
-                        <a aria-label="Subscribe" href="#" class="card-white-color custom-button" style="background-color: #035aa6; color: white; opacity: 1; font-size: unset; padding: 11px; ">Subscribe</a>
+                <div class="outer-holder-subscribe">
+                    <div class="subscribe-data-container">
+                        <h2 style=" padding-top:20px; opacity: .8; text-transform: initial; color: whitesmoke; text-align: center; padding-bottom: 0;" class="about-h2">Subscribe to the news list</h2>
+                        <p style="opacity: .8; padding-bottom: 15px; padding-top: 0; color: whitesmoke; text-align: center;" class="about-p">Get the latest and greatest deals from our agency delivered straight to your inbox. </p>
+                        <div class="subscribe-data">
+                            <input autocomplete="on" required style="width: 30%;" type="text" placeholder="subscribe , enter your email">
+                            <a aria-label="Subscribe" href="#" class="card-white-color custom-button" style="background-color: #035aa6; color: white; opacity: 1; font-size: unset; padding: 11px; ">Subscribe</a>
+                        </div>
                     </div>
                 </div>
             </div>
