still trying to fix it

--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                         <p style="opacity: .9; padding-bottom: 15px; padding-top: 0; color: whitesmoke; text-align: center;" class="about-p">Get the latest and greatest deals from our agency delivered straight to your inbox. </p>
                         <div class="subscribe-data">
                             <input autocomplete="on" required type="text" placeholder="subscribe , enter your email">
-                            <a aria-label="Subscribe" href="#" class="card-white-color">Subscribe</a>
+                            <a aria-label="Subscribe" href="#" class="">Subscribe</a>
                         </div>
                     </div>
                 </div>
