trying to fix subscribtion

--- a/index.html
+++ b/index.html
@@ -278,6 +278,11 @@
                 </section>
             </section>
             <!--end  popular-destination-container -->
+            <!--Start  testimonial-destination-container -->
+            <section class="testimonial-destination-container">
+
+            </section>
+            <!--end  testimonial-destination-container -->
 
             <!--Start  recent-destination-container -->
             <section class="recent-destination-container">
@@ -458,7 +463,7 @@
     <!--end  price -->
 
     <!-- start subscribe section-->
-    <section class="subscribe padding-top-bottom">
+    <section style="padding-top: 80px;" class="subscribe ">
         <div class="hero-image-subscribe">
             <div class="container">
                 <div class="outer-holder-subscribe">
@@ -466,7 +471,7 @@
                         <h2 style=" padding-top:0; opacity: .9; text-transform: initial; color: whitesmoke; text-align: center; padding-bottom: 0;" class="about-h2">Subscribe to the news list</h2>
                         <p style="opacity: .9; padding-bottom: 15px; padding-top: 0; color: whitesmoke; text-align: center;" class="about-p">Get the latest and greatest deals from our agency delivered straight to your inbox. </p>
                         <div class="subscribe-data">
-                            <input autocomplete="on" required type="text" placeholder="subscribe , enter your email">
+                            <input style="margin-top: 0;" autocomplete="on" required type="email" placeholder="Enter your email">
                             <a aria-label="Subscribe" href="#" class="">Subscribe</a>
                         </div>
                     </div>
