--- a/index.html
+++ b/index.html
@@ -470,8 +470,10 @@
                     <div class="subscribe-data-container">
                         <h2 style=" padding-top:0; opacity: .9; text-transform: initial; color: whitesmoke; text-align: center; padding-bottom: 0;" class="about-h2">Subscribe to the news list</h2>
                         <p style="opacity: .9; padding-bottom: 15px; padding-top: 0; color: whitesmoke; text-align: center;" class="about-p">Get the latest and greatest deals from our agency delivered straight to your inbox. </p>
+                    </div>
+                    <div class="subscribe-data-holder">
                         <div class="subscribe-data">
-                            <input style="margin-top: 0;" autocomplete="on" required type="email" placeholder="Enter your email">
+                            <input style="margin: 0; border-radius: 0;" autocomplete="on" required type="email" placeholder="Enter your email">
                             <a aria-label="Subscribe" href="#" class="">Subscribe</a>
                         </div>
                     </div>
