i hope its fixed

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                     </div>
                     <div class="subscribe-data-holder">
                         <div class="subscribe-data">
-                            <input style="margin: 0; border-radius: 0;" autocomplete="on" required type="email" placeholder="Enter your email">
+                            <input style=" border-radius: 0;" autocomplete="on" required type="email" placeholder="Enter your email">
                             <a aria-label="Subscribe" href="#" class="">Subscribe</a>
                         </div>
                     </div>
