--- a/index.html
+++ b/index.html
@@ -278,92 +278,138 @@
                 </section>
             </section>
             <!--end  popular-destination-container -->
-            <!--Start  testimonial-destination-container -->
-            <section class="testimonial-destination-container">
-
-            </section>
-            <!--end  testimonial-destination-container -->
-
-            <!--Start  recent-destination-container -->
-            <section class="recent-destination-container">
-                <div class="destination-text">
-                    <h2 style="width: 100%; display: block; padding: 40px 0;" class="about-h2">Recent Trips</h2>
-                </div>
-                <section class="destination-images-container">
-                    <article class="destination-image-holder seventeen-percent">
-                        <div class="background-holder">
-                            <img class="hero-image" src="images/place5.jpg" alt="place-1">
-                        </div>
-                        <div class="hero-image-text">
-                            <div class="place-name-text">
-                                <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="destination-image-holder">
-                        <div class="background-holder">
-                            <img class="hero-image" src="images/place2.jpg" alt="place-2">
-                        </div>
-                        <div class="hero-image-text">
-                            <div class="place-name-text">
-                                <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="destination-image-holder ">
-                        <div class="background-holder">
-                            <img class="hero-image" src="images/place3.jpg" alt="place-3">
-                        </div>
-                        <div class="hero-image-text">
-                            <div class="place-name-text">
-                                <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="destination-image-holder seventeen-percent">
-                        <div class="background-holder">
-                            <img class="hero-image" src="images/place1.jpg" alt="place-4">
-                        </div>
-                        <div class="hero-image-text">
-                            <div class="place-name-text">
-                                <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="destination-image-holder ">
-                        <div class="background-holder">
-                            <img class="hero-image" src="images/place5.jpg" alt="place-3">
-                        </div>
-                        <div class="hero-image-text">
-                            <div class="place-name-text">
-                                <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="destination-image-holder ">
-                        <div class="background-holder">
-                            <img class="hero-image" src="images/place2.jpg" alt="place-3">
-                        </div>
-                        <div class="hero-image-text">
-                            <div class="place-name-text">
-                                <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="destination-image-holder ">
-                        <div class="background-holder">
-                            <img class="hero-image" src="images/place1.jpg" alt="place-3">
-                        </div>
-                        <div class="hero-image-text">
-                            <div class="place-name-text">
-                                <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
-                            </div>
-                        </div>
-                    </article>
-                </section>
-            </section>
-            <!--Start  recent-destination-container -->
         </div>
+    </section>
+
+    <!--Start  testimonial-destination-container -->
+    <section class="testimonial-destination-container ">
+        <div style="padding: 60px 0;" class="testimonial-title-holder">
+            <div class="container">
+                <div class=testimonial-title>
+                    <h2 class="about-h2">What our customers says about the service</h2>
+                </div>
+                <div class="testimonials-holder">
+                    <div class="testimonials">
+                        <p class="about-p"> <q>
+                            Blind would equal while oh mr do style. Lain led and fact none. One preferred sportsmen resolving the happiness continued. High at of in loud rich true. Oh conveying do immediate acuteness in he. Equally welcome her set nothing
+                            has gravity whether parties.</q>
+                        </p>
+                        <h3 class="about-h2">Ahmad Dalao</h3>
+                        <h5 class="about-h2">Software developer</h5>
+                        <div class="testimonials-image">
+                            <img class="hero-image" src="https://images.unsplash.com/photo-1566396084807-d74c3e84b48f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="someone face">
+                        </div>
+                    </div>
+                    <div class="testimonials">
+                        <p class="about-p"> <q>
+                            Blind would equal while oh mr do style. Lain led and fact none. One preferred sportsmen resolving the happiness continued. High at of in loud rich true. Oh conveying do immediate acuteness in he. Equally welcome her set nothing
+                            has gravity whether parties.</q>
+                        </p>
+                        <h3 class="about-h2">Ahmad Dalao</h3>
+                        <h5 class="about-h2">Software developer</h5>
+                        <div class="testimonials-image">
+                            <img class="hero-image" src="https://images.unsplash.com/photo-1552374196-c4e7ffc6e126?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="someone face">
+                        </div>
+                    </div>
+                    <div class="testimonials">
+                        <p class="about-p"> <q>
+                            Blind would equal while oh mr do style. Lain led and fact none. One preferred sportsmen resolving the happiness continued. High at of in loud rich true. Oh conveying do immediate acuteness in he. Equally welcome her set nothing
+                            has gravity whether parties.</q>
+                        </p>
+                        <h3 class="about-h2">Ahmad Dalao</h3>
+                        <h5 class="about-h2">Software developer</h5>
+                        <div class="testimonials-image">
+                            <img class="hero-image" src="https://images.unsplash.com/photo-1542103749-8ef59b94f47e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" alt="someone face">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--end  testimonial-destination-container -->
+
+    <!--Start  recent-destination-container -->
+    <section class="destination recent-destination-container padding-top-bottom">
+        <div class="container">
+            <div class="destination-text">
+                <h2 style="width: 100%; display: block; " class="about-h2">Recent Trips</h2>
+            </div>
+            <section class="destination-images-container">
+                <article class="destination-image-holder seventeen-percent">
+                    <div class="background-holder">
+                        <img class="hero-image" src="images/place5.jpg" alt="place-1">
+                    </div>
+                    <div class="hero-image-text">
+                        <div class="place-name-text">
+                            <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
+                        </div>
+                    </div>
+                </article>
+                <article class="destination-image-holder">
+                    <div class="background-holder">
+                        <img class="hero-image" src="images/place2.jpg" alt="place-2">
+                    </div>
+                    <div class="hero-image-text">
+                        <div class="place-name-text">
+                            <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
+                        </div>
+                    </div>
+                </article>
+                <article class="destination-image-holder ">
+                    <div class="background-holder">
+                        <img class="hero-image" src="images/place3.jpg" alt="place-3">
+                    </div>
+                    <div class="hero-image-text">
+                        <div class="place-name-text">
+                            <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
+                        </div>
+                    </div>
+                </article>
+                <article class="destination-image-holder seventeen-percent">
+                    <div class="background-holder">
+                        <img class="hero-image" src="images/place1.jpg" alt="place-4">
+                    </div>
+                    <div class="hero-image-text">
+                        <div class="place-name-text">
+                            <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
+                        </div>
+                    </div>
+                </article>
+                <article class="destination-image-holder ">
+                    <div class="background-holder">
+                        <img class="hero-image" src="images/place5.jpg" alt="place-3">
+                    </div>
+                    <div class="hero-image-text">
+                        <div class="place-name-text">
+                            <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
+                        </div>
+                    </div>
+                </article>
+                <article class="destination-image-holder ">
+                    <div class="background-holder">
+                        <img class="hero-image" src="images/place2.jpg" alt="place-3">
+                    </div>
+                    <div class="hero-image-text">
+                        <div class="place-name-text">
+                            <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
+                        </div>
+                    </div>
+                </article>
+                <article class="destination-image-holder ">
+                    <div class="background-holder">
+                        <img class="hero-image" src="images/place1.jpg" alt="place-3">
+                    </div>
+                    <div class="hero-image-text">
+                        <div class="place-name-text">
+                            <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
+                        </div>
+                    </div>
+                </article>
+            </section>
+        </div>
+    </section>
+    <!--Start  recent-destination-container -->
+    </div>
     </section>
     <!--end  destination -->
 
