--- a/index.html
+++ b/index.html
@@ -520,7 +520,8 @@
                     <div class="subscribe-data-holder">
                         <div class="subscribe-data">
                             <input style=" border-radius: 0;" autocomplete="on" required type="email" placeholder="Enter your email">
-                            <a aria-label="Subscribe" href="#" class="">Subscribe</a>
+                            <!-- <a aria-label="Subscribe" href="#" class="">Subscribe</a> -->
+                            <input type="submit" value="Subscribe">
                         </div>
                     </div>
                 </div>
