--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
                     </div>
                     <div class="subscribe-data-holder">
                         <div class="subscribe-data">
-                            <input style=" border-radius: 0;" autocomplete="on" required type="email" placeholder="Enter your email">
+                            <input autocomplete="on" required type="email" placeholder="Enter your email">
                             <!-- <a aria-label="Subscribe" href="#" class="">Subscribe</a> -->
                             <input type="submit" value="Subscribe">
                         </div>
