fixing an issue

--- a/index.html
+++ b/index.html
@@ -521,7 +521,8 @@
                         <div class="subscribe-data">
                             <input autocomplete="on" required type="email" placeholder="Enter your email">
                             <!-- <a aria-label="Subscribe" href="#" class="">Subscribe</a> -->
-                            <input type="submit" value="Subscribe">
+                            <label for="subscribe"></label>
+                            <input name="subscribe" type="submit" value="Subscribe">
                         </div>
                     </div>
                 </div>
