last push i hope

--- a/index.html
+++ b/index.html
@@ -521,8 +521,8 @@
                         <div class="subscribe-data">
                             <input autocomplete="on" required type="email" placeholder="Enter your email">
                             <!-- <a aria-label="Subscribe" href="#" class="">Subscribe</a> -->
-                            <label for="subscribe"></label>
-                            <input name="subscribe" type="submit" value="Subscribe">
+                            <label hidden for="subscribe">subscribe</label>
+                            <input name="subscribe" type="submit" value="subscribe">
                         </div>
                     </div>
                 </div>
