i hope that fix it

--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                             <input autocomplete="on" required type="email" placeholder="Enter your email">
                             <!-- <a aria-label="Subscribe" href="#" class="">Subscribe</a> -->
                             <label hidden for="subscribe">subscribe</label>
-                            <input name="subscribe" type="submit" value="subscribe">
+                            <input id="subscribe" name="subscribe" type="submit" value="subscribe">
                         </div>
                     </div>
                 </div>
