--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <!--Test GIT SAFAA-->
     <!--Start header trying something-->
     <header class="header">
       <nav id="navbar" class="navbar">
